Created a start menu with buttons. It has some "ART" as the background that i made and it can click new game to start the next level.

--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -165,10 +165,11 @@ LastLevel=/Game/TopDownBP/Maps/Start
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/TopDownBP/Maps/StartMenu.StartMenu
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode
 
 [RootWindow]
-ScreenPosition=X=81.000 Y=59.500
-WindowSize=X=1366.000 Y=806.000
+ScreenPosition=X=27.500 Y=22.000
+WindowSize=X=1376.000 Y=816.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1125,6 +1126,9 @@ obstacle_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.Constrai
 Pieces_C=StaticMeshComponent.Collision.Collision,
 Wall_C=
 MyController_C=
+TopDownGameMode_C=
+StartMenu_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
+Actor=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -2234,32 +2238,39 @@ Button.Clipping=True
 Button.Navigation=True
 Button.Localization=True
 Button.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Maps/StartMenu
-MRUItem1=/Game/TopDownBP/Maps/Start
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem3=/Game/TopDownBP/Blueprints/MyController
-MRUItem4=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem5=/Game/blueprints/Wall
-MRUItem6=/Game/blueprints/bullet
-MRUItem7=/Game/blueprints/obstacle
-MRUItem8=/Game/blueprints/Pieces
-MRUItem9=/Game/assets/pistolmaterial
-MRUItem10=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
-MRUItem11=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAI
-MRUItem12=/Game/blueprints/Swordweapon
-MRUItem13=/Game/TopDownBP/Blueprints/MySimpleAI
-MRUItem14=/Game/TopDownBP/Blueprints/MYNPC/MyAIController
-MRUItem15=/Game/TopDownBP/Blueprints/MYNPC/IsPlayerInRange
-MRUItem16=/Game/TopDownBP/Blueprints/MYNPC/MeleeAttack
-MRUItem17=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
-MRUItem18=/Game/CombatInterface
-MRUItem19=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem0=/Game/TopDownBP/Maps/Start
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem3=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath
+MRUItem4=/Game/TopDownBP/Maps/StartMenu
+MRUItem5=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
+MRUItem6=/Game/TopDownBP/Blueprints/MyController
+MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem8=/Game/blueprints/Wall
+MRUItem9=/Game/blueprints/bullet
+MRUItem10=/Game/blueprints/obstacle
+MRUItem11=/Game/blueprints/Pieces
+MRUItem12=/Game/assets/pistolmaterial
+MRUItem13=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAI
+MRUItem14=/Game/blueprints/Swordweapon
+MRUItem15=/Game/TopDownBP/Blueprints/MySimpleAI
+MRUItem16=/Game/TopDownBP/Blueprints/MYNPC/MyAIController
+MRUItem17=/Game/TopDownBP/Blueprints/MYNPC/IsPlayerInRange
+MRUItem18=/Game/TopDownBP/Blueprints/MYNPC/MeleeAttack
+MRUItem19=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.AxisConfig.AxisConfig[23]\" \"Object.Bindings.AxisConfig.AxisConfig[24]\" \"Object.Bindings.AxisConfig.AxisConfig[25]\" \"Object.Bindings.AxisConfig.AxisConfig[26]\" \"Object.Bindings.AxisConfig.AxisConfig[27]\" \"Object.Bindings.AxisConfig.AxisConfig[28]\" \"Object.Bindings.AxisConfig.AxisConfig[29]\" \"Object.Bindings.AxisConfig.AxisConfig[30]\" \"Object.Bindings.AxisConfig.AxisConfig[31]\" \"Object.Bindings.AxisConfig.AxisConfig[32]\" \"Object.Bindings.AxisConfig.AxisConfig[33]\" \"Object.Bindings.AxisConfig.AxisConfig[34]\" \"Object.Bindings.AxisConfig.AxisConfig[35]\" \"Object.Bindings.AxisConfig.AxisConfig[36]\" \"Object.Bindings.AxisConfig.AxisConfig[37]\" \"Object.Bindings.AxisConfig.AxisConfig[38]\" \"Object.Bindings.AxisConfig.AxisConfig[39]\" \"Object.Bindings.AxisConfig.AxisConfig[40]\" \"Object.Bindings.AxisConfig.AxisConfig[41]\" \"Object.Bindings.AxisConfig.AxisConfig[42]\" \"Object.Bindings.AxisConfig.AxisConfig[43]\" \"Object.Bindings.AxisConfig.AxisConfig[44]\" \"Object.Bindings.AxisConfig.AxisConfig[45]\" \"Object.Bindings.AxisConfig.AxisConfig[46]\" \"Object.Bindings.AxisConfig.AxisConfig[47]\" \"Object.Bindings.AxisConfig.AxisConfig[48]\" \"Object.Bindings.AxisConfig.AxisConfig[49]\" \"Object.Bindings.AxisConfig.AxisConfig[50]\" \"Object.Bindings.AxisConfig.AxisConfig[51]\" \"Object.Bindings.AxisConfig.AxisConfig[52]\" \"Object.Bindings.AxisConfig.AxisConfig[53]\" \"Object.Bindings.AxisConfig.AxisConfig[54]\" \"Object.Bindings.AxisConfig.AxisConfig[55]\" \"Object.Bindings.AxisConfig.AxisConfig[56]\" \"Object.Bindings.AxisConfig.AxisConfig[57]\" \"Object.Bindings.AxisConfig.AxisConfig[58]\" \"Object.Bindings.AxisConfig.AxisConfig[59]\" \"Object.Bindings.AxisConfig.AxisConfig[60]\" \"Object.Bindings.AxisConfig.AxisConfig[61]\" \"Object.Bindings.AxisConfig.AxisConfig[62]\" \"Object.Bindings.AxisConfig.AxisConfig[63]\" \"Object.Bindings.AxisConfig.AxisConfig[64]\" \"Object.Bindings.AxisConfig.AxisConfig[65]\" \"Object.Bindings.AxisConfig.AxisConfig[66]\" \"Object.Bindings.AxisConfig.AxisConfig[67]\" \"Object.Bindings.AxisConfig.AxisConfig[68]\" \"Object.Bindings.AxisConfig.AxisConfig[69]\" \"Object.Bindings.AxisConfig.AxisConfig[70]\" \"Object.Bindings.AxisConfig.AxisConfig[71]\" \"Object.Bindings.AxisConfig.AxisConfig[72]\" \"Object.Bindings.AxisConfig.AxisConfig[73]\" \"Object.Bindings.AxisConfig.AxisConfig[74]\" \"Object.Bindings.AxisConfig.AxisConfig[75]\" \"Object.Bindings.AxisConfig.AxisConfig[76]\" \"Object.Bindings.AxisConfig.AxisConfig[77]\" \"Object.Bindings.AxisConfig.AxisConfig[78]\" \"Object.Bindings.AxisConfig.AxisConfig[79]\" \"Object.Bindings.AxisConfig.AxisConfig[80]\" \"Object.Bindings.AxisConfig.AxisConfig[81]\" \"Object.Bindings.AxisConfig.AxisConfig[82]\" \"Object.Bindings.AxisConfig.AxisConfig[83]\" \"Object.Bindings.AxisConfig.AxisConfig[84]\" \"Object.Bindings.AxisConfig.AxisConfig[85]\" \"Object.Bindings.AxisConfig.AxisConfig[86]\" \"Object.Bindings.AxisConfig.AxisConfig[87]\" \"Object.Bindings.AxisConfig.AxisConfig[88]\" \"Object.Bindings.AxisConfig.AxisConfig[89]\" \"Object.Bindings.AxisConfig.AxisConfig[90]\" \"Object.Bindings.AxisConfig.AxisConfig[91]\" \"Object.Bindings.AxisConfig.AxisConfig[92]\" \"Object.Bindings.AxisConfig.AxisConfig[93]\" \"Object.Bindings.AxisConfig.AxisConfig[94]\" \"Object.Bindings.AxisConfig.AxisConfig[95]\" \"Object.Bindings.AxisConfig.AxisConfig[96]\" \"Object.Bindings.AxisConfig.AxisConfig[97]\" \"Object.Bindings.AxisConfig.AxisConfig[98]\" \"Object.Bindings.AxisConfig.AxisConfig[99]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.ActionMappings.ActionMappings[13]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" \"Object.Bindings.AxisMappings.AxisMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" \"Object.Console.ConsoleKeys\" "
@@ -2326,20 +2337,20 @@ K2Node=
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" "
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/blueprints/Pieces.Pieces;
 RecentlyPlaced=/Game/blueprints/bullet.bullet;
 RecentlyPlaced=/Game/blueprints/pistol.pistol;
-RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath.PatrolPath;
 RecentlyPlaced=/Game/blueprints/obstacle.obstacle;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MySimpleAI.MySimpleAI;
@@ -2391,6 +2402,7 @@ RecentlyPlaced=/Game/Blueprints/Wallhole.Wallhole;
 /Game/blueprints/Pieces.Pieces=0
 /Game/blueprints/Wall.Wall=0
 /Game/TopDownBP/Maps/StartMenu.StartMenu=0
+/Game/TopDownBP/Blueprints/MYNPC/PatrolPath.PatrolPath=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -2586,6 +2598,7 @@ MeshPaintSettings=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+DeleteVariableInUse_Warning=False
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
