--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -134,7 +134,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/blueprints
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints/MYNPC
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -166,15 +166,12 @@ LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree.MyBehaviorTree
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAIBlackboard.MySimpleAIBlackboard
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/RunAway.RunAway
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/FindPlayerLocation.FindPlayerLocation
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/IncrementPathIndex.IncrementPathIndex
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAI.MySimpleAI
 
 [RootWindow]
-ScreenPosition=X=27.200 Y=21.600
-WindowSize=X=1382.400 Y=816.000
+ScreenPosition=X=27.000 Y=21.500
+WindowSize=X=1387.000 Y=821.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -192,7 +189,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Users/Jacke/Documents/Unreal Projects/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/TopDownBP/Maps
+UNR=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/TopDownBP/Maps
 BRUSH=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBX=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBXAnim=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
@@ -2282,28 +2279,43 @@ IsTarget_C.Service=True
 RunAway_C.Default=True
 RunAway_C.Task=True
 RunAway_C.Description=True
+1M_Cube_DM_Blueprint_C.TransformCommon=True
+1M_Cube_DM_Blueprint_C.Materials=True
+1M_Cube_DM_Blueprint_C.DestructibleComponent=True
+1M_Cube_DM_Blueprint_C.Physics=True
+1M_Cube_DM_Blueprint_C.Collision=True
+1M_Cube_DM_Blueprint_C.Lighting=True
+1M_Cube_DM_Blueprint_C.Rendering=True
+1M_Cube_DM_Blueprint_C.SkinWeights=True
+1M_Cube_DM_Blueprint_C.Navigation=True
+1M_Cube_DM_Blueprint_C.VirtualTexture=True
+1M_Cube_DM_Blueprint_C.Tags=True
+1M_Cube_DM_Blueprint_C.Cooking=True
+1M_Cube_DM_Blueprint_C.Replication=True
+1M_Cube_DM_Blueprint_C.Input=True
+1M_Cube_DM_Blueprint_C.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/MYNPC/IncrementPathIndex
-MRUItem1=/Game/TopDownBP/Blueprints/MYNPC/FindPlayerLocation
-MRUItem2=/Game/TopDownBP/Blueprints/MYNPC/BTTask_BlueprintBase_New
-MRUItem3=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
-MRUItem4=/Game/TopDownBP/Blueprints/MyController
-MRUItem5=/Game/blueprints/sword
-MRUItem6=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
-MRUItem7=/Game/blueprints/bullet
-MRUItem8=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem9=/Game/TopDownBP/Maps/Start
-MRUItem10=/Game/blueprints/Wall
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem12=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem13=/Game/TopDownBP/Maps/StartMenu
-MRUItem14=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath
-MRUItem15=/Game/blueprints/obstacle
-MRUItem16=/Game/blueprints/Pieces
-MRUItem17=/Game/assets/pistolmaterial
-MRUItem18=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAI
-MRUItem19=/Game/blueprints/Swordweapon
+MRUItem0=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
+MRUItem1=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAI
+MRUItem2=/Game/TopDownBP/Blueprints/MYNPC/IncrementPathIndex
+MRUItem3=/Game/TopDownBP/Blueprints/MYNPC/FindPlayerLocation
+MRUItem4=/Game/TopDownBP/Blueprints/MYNPC/RunAway
+MRUItem5=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
+MRUItem6=/Game/TopDownBP/Blueprints/MYNPC/BTTask_BlueprintBase_New
+MRUItem7=/Game/TopDownBP/Blueprints/MyController
+MRUItem8=/Game/blueprints/sword
+MRUItem9=/Game/blueprints/bullet
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem11=/Game/TopDownBP/Maps/Start
+MRUItem12=/Game/blueprints/Wall
+MRUItem13=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem14=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem15=/Game/TopDownBP/Maps/StartMenu
+MRUItem16=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath
+MRUItem17=/Game/blueprints/obstacle
+MRUItem18=/Game/blueprints/Pieces
+MRUItem19=/Game/assets/pistolmaterial
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -2390,8 +2402,8 @@ Wally_C="\"Object.Destruction.DestructibleComponent.Object.DestructibleComponent
 DestructibleActor=
 
 [PlacementMode]
-RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath.PatrolPath;
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI;
+RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/PatrolPath.PatrolPath;
 RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -2458,6 +2470,7 @@ RecentlyPlaced=/Game/Blueprints/Wallhole.Wallhole;
 /Game/Geometry/Meshes/TemplateFloor_DM.TemplateFloor_DM=0
 /Game/Geometry/Meshes/Wally.Wally=0
 /Game/blueprints/pistol.pistol=0
+/Game/TopDownBP/Blueprints/MYNPC/RunAway.RunAway=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
