--- a/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Wrath_of_Suicider/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Maps
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
 SequenceBrowser.ActiveFrontendFilters=
@@ -163,16 +163,20 @@ AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/Start
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/TopDownBP/Maps/GameUI.GameUI
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree.MyBehaviorTree
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI
-OpenAssetsAtExit=/Game/blueprints/bullet.bullet
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/MySimpleAIBlackboard.MySimpleAIBlackboard
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/MYNPC/IsPlayerInRange.IsPlayerInRange
 
 [RootWindow]
-ScreenPosition=X=26.000 Y=20.500
-WindowSize=X=1397.000 Y=821.000
+ScreenPosition=X=66.400 Y=0.000
+WindowSize=X=1400.000 Y=816.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -190,7 +194,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 StaticMeshEditorViewport.LayoutType=OnePane
 
 [Directories2]
-UNR=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/TopDownBP/Maps
+UNR=../../../../../../Users/Jacke/Documents/Unreal Projects/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/TopDownBP/Maps
 BRUSH=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBX=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
 FBXAnim=../../../../../../Users/patri/Documents/Unreal Project for Jason/Wrath-of-the-Suicider/Wrath_of_Suicider/Content/
@@ -1024,8 +1028,8 @@ ApexDestructionEditor.TimeStamp=2020.11.18-22.49.10
 ApexDestructionEditor.LastCompileMethod=Unknown
 
 [MRU]
-MRUItem0=/Game/TopDownBP/Maps/Start
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem1=/Game/TopDownBP/Maps/Start
 MRUItem2=/Game/TopDownBP/Maps/winscreen
 
 [/Script/UnrealEd.MaterialEditorOptions]
@@ -1113,13 +1117,13 @@ SkeletalMeshComponent=SkeletalMeshComponent.Collision.Collision,
 MySimpleAI_C=
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,DestructibleComponent.Collision.Collision,
 FindRandomLocation_C=
-MyCharAI_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+MyCharAI_C=
 PatrolPath_C=
 BTTask_BlueprintBase_New_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
 IncrementPathIndex_C=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,
 FindPathPoint_C=
-PropertyWrapper=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+PropertyWrapper=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,DestructibleComponent.Collision.Collision,
 LowerPathIndex_C=
 MyAIController_C=
 Character=
@@ -1128,19 +1132,19 @@ K2Node_VariableSet=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.
 ChangeStatus_C=
 BTService_BlueprintBase_New_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
 MeleeAttack_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
-IsPlayerInRange_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
+IsPlayerInRange_C=
 TopDownCharacter_C=
 CapsuleComponent=CapsuleComponent.Collision.Collision,
 obstacle_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
 Pieces_C=StaticMeshComponent.Collision.Collision,
-Wall_C=
+Wall_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,DestructibleComponent.Collision.Collision,
 MyController_C=
 TopDownGameMode_C=
 StartMenu_C=
 Actor=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,
 DestructibleComponent=DestructibleComponent.Collision.Collision,
 DestructibleActor=
-GameUI_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
+GameUI_C=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,DestructibleComponent.Collision.Collision,
 Senses=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Senses_4=SkeletalMeshComponent.Collision.Collision,MyCharAI_C.Physics.ConstraintsGroup,MyCharAI_C.Rendering.TextureStreaming,MyCharAI_C.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 Wally_C=
@@ -2376,32 +2380,48 @@ DestructibleFractureSettings.General=True
 TopDownOverview_C.Testing=True
 TopDownOverview_C.Tutorial=True
 TopDownOverview_C.Stages=True
+SkeletalMeshSocket.Socket Parameters=True
+EditorNotifyObject.AnimNotify=True
+EditorNotifyObject.Trigger Settings=True
+EditorNotifyObject.Category=True
+EditorNotifyObject.AnimLink=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Maps/Start
-MRUItem1=/Game/blueprints/bullet
-MRUItem2=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
+MRUItem0=/Game/TopDownBP/Blueprints/MYNPC/IsPlayerInRange
+MRUItem1=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
+MRUItem2=/Game/TopDownBP/Maps/GameUI
 MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem6=/Game/TopDownBP/TopDownOverview
-MRUItem7=/Game/TopDownBP/Maps/WinMenu
-MRUItem8=/Game/TopDownBP/Maps/winscreen
-MRUItem9=/Game/TopDownBP/Maps/Start1
-MRUItem10=/Game/Geometry/Meshes/TemplateFloor_DM
-MRUItem11=/Game/blueprints/Wall
-MRUItem12=/Game/Geometry/Meshes/Wally
-MRUItem13=/Game/TopDownBP/Blueprints/MYNPC/RunAway
-MRUItem14=/Game/TopDownBP/Blueprints/MYNPC/Investgate
-MRUItem15=/Game/TopDownBP/Blueprints/MYNPC/MyBehaviorTree
-MRUItem16=/Game/TopDownBP/Blueprints/MYNPC/MyAIController
-MRUItem17=/Game/blueprints/pistol
-MRUItem18=/Game/TopDownBP/Blueprints/MyController
-MRUItem19=/Game/TopDownBP/Maps/StartMenu
+MRUItem4=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI
+MRUItem5=/Game/Attack_PrimaryA_Montage
+MRUItem6=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem7=/Game/TopDownBP/Maps/Start
+MRUItem8=/Game/blueprints/bullet
+MRUItem9=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem10=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem11=/Game/TopDownBP/TopDownOverview
+MRUItem12=/Game/TopDownBP/Maps/WinMenu
+MRUItem13=/Game/TopDownBP/Maps/winscreen
+MRUItem14=/Game/TopDownBP/Maps/Start1
+MRUItem15=/Game/Geometry/Meshes/TemplateFloor_DM
+MRUItem16=/Game/blueprints/Wall
+MRUItem17=/Game/Geometry/Meshes/Wally
+MRUItem18=/Game/TopDownBP/Blueprints/MYNPC/RunAway
+MRUItem19=/Game/TopDownBP/Blueprints/MYNPC/Investgate
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.General.FractureMaterialDesc\" "
+Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.AxisConfig.AxisConfig[23]\" \"Object.Bindings.AxisConfig.AxisConfig[24]\" \"Object.Bindings.AxisConfig.AxisConfig[25]\" \"Object.Bindings.AxisConfig.AxisConfig[26]\" \"Object.Bindings.AxisConfig.AxisConfig[27]\" \"Object.Bindings.AxisConfig.AxisConfig[28]\" \"Object.Bindings.AxisConfig.AxisConfig[29]\" \"Object.Bindings.AxisConfig.AxisConfig[30]\" \"Object.Bindings.AxisConfig.AxisConfig[31]\" \"Object.Bindings.AxisConfig.AxisConfig[32]\" \"Object.Bindings.AxisConfig.AxisConfig[33]\" \"Object.Bindings.AxisConfig.AxisConfig[34]\" \"Object.Bindings.AxisConfig.AxisConfig[35]\" \"Object.Bindings.AxisConfig.AxisConfig[36]\" \"Object.Bindings.AxisConfig.AxisConfig[37]\" \"Object.Bindings.AxisConfig.AxisConfig[38]\" \"Object.Bindings.AxisConfig.AxisConfig[39]\" \"Object.Bindings.AxisConfig.AxisConfig[40]\" \"Object.Bindings.AxisConfig.AxisConfig[41]\" \"Object.Bindings.AxisConfig.AxisConfig[42]\" \"Object.Bindings.AxisConfig.AxisConfig[43]\" \"Object.Bindings.AxisConfig.AxisConfig[44]\" \"Object.Bindings.AxisConfig.AxisConfig[45]\" \"Object.Bindings.AxisConfig.AxisConfig[46]\" \"Object.Bindings.AxisConfig.AxisConfig[47]\" \"Object.Bindings.AxisConfig.AxisConfig[48]\" \"Object.Bindings.AxisConfig.AxisConfig[49]\" \"Object.Bindings.AxisConfig.AxisConfig[50]\" \"Object.Bindings.AxisConfig.AxisConfig[51]\" \"Object.Bindings.AxisConfig.AxisConfig[52]\" \"Object.Bindings.AxisConfig.AxisConfig[53]\" \"Object.Bindings.AxisConfig.AxisConfig[54]\" \"Object.Bindings.AxisConfig.AxisConfig[55]\" \"Object.Bindings.AxisConfig.AxisConfig[56]\" \"Object.Bindings.AxisConfig.AxisConfig[57]\" \"Object.Bindings.AxisConfig.AxisConfig[58]\" \"Object.Bindings.AxisConfig.AxisConfig[59]\" \"Object.Bindings.AxisConfig.AxisConfig[60]\" \"Object.Bindings.AxisConfig.AxisConfig[61]\" \"Object.Bindings.AxisConfig.AxisConfig[62]\" \"Object.Bindings.AxisConfig.AxisConfig[63]\" \"Object.Bindings.AxisConfig.AxisConfig[64]\" \"Object.Bindings.AxisConfig.AxisConfig[65]\" \"Object.Bindings.AxisConfig.AxisConfig[66]\" \"Object.Bindings.AxisConfig.AxisConfig[67]\" \"Object.Bindings.AxisConfig.AxisConfig[68]\" \"Object.Bindings.AxisConfig.AxisConfig[69]\" \"Object.Bindings.AxisConfig.AxisConfig[70]\" \"Object.Bindings.AxisConfig.AxisConfig[71]\" \"Object.Bindings.AxisConfig.AxisConfig[72]\" \"Object.Bindings.AxisConfig.AxisConfig[73]\" \"Object.Bindings.AxisConfig.AxisConfig[74]\" \"Object.Bindings.AxisConfig.AxisConfig[75]\" \"Object.Bindings.AxisConfig.AxisConfig[76]\" \"Object.Bindings.AxisConfig.AxisConfig[77]\" \"Object.Bindings.AxisConfig.AxisConfig[78]\" \"Object.Bindings.AxisConfig.AxisConfig[79]\" \"Object.Bindings.AxisConfig.AxisConfig[80]\" \"Object.Bindings.AxisConfig.AxisConfig[81]\" \"Object.Bindings.AxisConfig.AxisConfig[82]\" \"Object.Bindings.AxisConfig.AxisConfig[83]\" \"Object.Bindings.AxisConfig.AxisConfig[84]\" \"Object.Bindings.AxisConfig.AxisConfig[85]\" \"Object.Bindings.AxisConfig.AxisConfig[86]\" \"Object.Bindings.AxisConfig.AxisConfig[87]\" \"Object.Bindings.AxisConfig.AxisConfig[88]\" \"Object.Bindings.AxisConfig.AxisConfig[89]\" \"Object.Bindings.AxisConfig.AxisConfig[90]\" \"Object.Bindings.AxisConfig.AxisConfig[91]\" \"Object.Bindings.AxisConfig.AxisConfig[92]\" \"Object.Bindings.AxisConfig.AxisConfig[93]\" \"Object.Bindings.AxisConfig.AxisConfig[94]\" \"Object.Bindings.AxisConfig.AxisConfig[95]\" \"Object.Bindings.AxisConfig.AxisConfig[96]\" \"Object.Bindings.AxisConfig.AxisConfig[97]\" \"Object.Bindings.AxisConfig.AxisConfig[98]\" \"Object.Bindings.AxisConfig.AxisConfig[99]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" \"Object.Console.ConsoleKeys\" "
@@ -2455,7 +2475,7 @@ BehaviorTreeGraphNode="\"Object.AI.AI|BehaviorTree\" "
 AIGraphNode="\"Object.AI.AI|BehaviorTree\" "
 EdGraphNode="\"Object.AI.AI|BehaviorTree\" "
 BlackboardData="\"Object.Blackboard\" "
-DataAsset="\"Object.Blackboard\" "
+DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 PatrolPath_C="\"Object.Default.PathPoints\" "
 MyCharAI_C=
 Character=
@@ -2468,11 +2488,11 @@ K2Node=
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 Image="\"Object.Appearance.Brush\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget="\"Object.Style.WidgetStyle\" "
+Visual="\"Object.Style.WidgetStyle\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" "
+PanelWidget=
 ChaosDebugDrawComponent="\"Object.Tags.ComponentTags\" "
 DestructibleComponent="\"Object.Rendering.OverrideMaterials\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[0]\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 DestructibleFractureSettings="\"Object.General.FractureMaterialDesc\" "
@@ -2484,6 +2504,7 @@ Wally_C=
 DestructibleActor=
 1M_Cube_DM_Blueprint_C="\"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
 Wall_Blueprint_C="\"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[0]\" \"Object.Destruction.DestructibleComponent.Object.DestructibleComponent.FractureEffects.FractureEffects[1]\" "
+ProgressBar="\"Object.Style.WidgetStyle\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/TopDownBP/Blueprints/MYNPC/MyCharAI.MyCharAI;
